--- a/estilos/style.css
+++ b/estilos/style.css
@@ -50,3 +50,24 @@ a#face{
     top: 90px;
     left: 70%;
 }
+section#redes-sociais{
+    text-align: right;
+    
+
+    
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.842);
+    box-sizing: border-box;
+
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.637);
+    transform: translate(-5px, -5px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.521);
+}
